--- a/ms.Rmd
+++ b/ms.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Austraits -- a curated plant trait database for the Australian flora"
+title: "AusTraits -- a curated plant trait database for the Australian flora"
 csl: assets/nature.csl
 editor_options:
   chunk_output_type: console
@@ -18,8 +18,9 @@ header-includes:
 - \usepackage{unicode-math}
 # - \setmainfont{Arial}
 # - \setmathfont{Cambria Math}
-bibliography: [data/references_ms.bib]
+bibliography: [data/references_all.bib]
 ---
+
 
 ```{r global_options, include=FALSE}
 knitr::opts_chunk$set(fig.pos = 'H')
@@ -40,19 +41,31 @@ library(rmarkdown)
 source("R/ms.R")
 
 austraits <- readRDS("data/austraits_2.0.0.rds")
+
+sources_all <- 
+  bibtex::read.bib("data/references_ms.bib")
+
+RefManageR::WriteBib(austraits$sources, "data/references_data.bib")
+
+c(readLines("data/references_ms.bib"), "\n", readLines("data/references_data.bib")) %>% writeLines("data/references_all.bib")
+
 ```
 
 ```{r authors, results='asis', echo=FALSE}
 authors_build <- read_csv("data/lead_authors.csv", col_types = cols(.default = "c"))
 
+# check list of acknowledgements and assistants
+
 data_contributors <- 
   austraits$contributors %>% 
     filter(
-          # old studies
+          # old studies or excluded
           !dataset_id %in% c("Lawes_2012", "Westman_1977", "Hall_1981", "Hocking_1982", "Hocking_1986", "Toelken_1996", "Brock_1993", "Forster_1992", "Forster_1995", "Goble_1981"),
            !role %in% c("assistant"),
            # deceased
-           !name %in% c("Peter Clarke", "Barbara Rice", "Peter Myerscough", "Lyn Craven", "Harold Trevor Clifford", "William Cooper")
+           !name %in% c("Peter Clarke", "Barbara Rice", "Peter Myerscough", "Lyn Craven", "Harold Trevor Clifford", "William Cooper"),
+            # no response or can't locate
+           !name %in% c("Huw Morgan", "Wendy Cooper", "Muhammad Islam", "Michael Lawes")
            ) %>% 
     mutate(year = dataset_id %>% str_split_fixed("_", 4) %>% .[,2]) %>% 
     arrange(year) %>%
@@ -73,7 +86,7 @@ authors <- bind_rows(authors_build,
                      data_contributors %>% filter(! (name %in% authors_build$name))
                     )
 
-#  authors %>% select(dataset_ids, everything()) %>% mutate_all(~ replace_na(.x, "")) %>% write_csv("data/author_list.csv")
+authors %>% select(dataset_ids, everything()) %>% mutate_all(~ replace_na(.x, "")) %>% write_csv("data/author_list.csv")
 
 # Update author info from google sheets
 
@@ -105,16 +118,6 @@ harmonised individual-, species- and genus-level observations coupled to, where 
 properties. This data descriptor provides information on Version `r austraits$build_info$version` of AusTraits which contains data for `r austraits$traits %>% nrow()` trait-by-taxa combinations. We envision AusTraits as an on-
 going collaborative initiative for easily archiving and sharing trait data to increase our collective understanding of the Australian flora.
 
-## Todo
-
-Refs
-
-
-* Australian Plant Census, Centre of Australian National Biodiversity Research, Council of Heads of Australasian Herbaria, (14/05/2020) https://id.biodiversity.org.au/tree/51354547
-* Australian Plant Name Index (continuously updated), Centre of Australian National Biodiversity Research, www.biodiversity.org.au/nsl/services/apni (14/05/2020)
-
-
-
 ## Background and Summary
 
 Species traits are essential metrics for comparing ecological strategies in plants arrayed across environmental space or evolutionary lineages [@diaz2016global; @kunstler2016plant; @zanne2014three; @cornwell2014functional]. Broadly, a trait is any measurable property of a plant capturing aspects of its structure or function [@chapin1993evolution; @adler2014functional; @diaz1998plant]. Traits thereby provide useful indicators of species behaviours in communities and ecosystems, regardless of their taxonomy [@violle2007let; @funk2017revisiting]. Through targeted global initiatives the volume of available trait information for plants has grown rapidly in the last two decades. However, the geographic coverage of trait observations across the globe is patchy, limiting detailed analyses of trait variation and diversity in some regions. One such region is Australia; a continent with a flora of c. 24,000 native higher-plant species [@council2010australian]. While significant investment has been made in curating and digitising herbarium collections in Australia over the last two decades (e.g. The Australian Virtual Herbarium houses ~7 million specimen occurrence records; https://avh.ala.org.au), no complementary resource yet exists for consolidating information on plant traits. 
@@ -132,26 +135,59 @@ To assemble AusTraits from diverse primary sources and make it available for reu
 
 We envision AusTraits as an on-going collaborative initiative for easily archiving and sharing trait data to accelerate our collective understanding the Australian flora. It is anticipated that open access to a comprehensive resource like AusTraits will generate significant new knowledge about the Australian flora across multiple scales of interest. AusTraits will likely reduce duplication of effort in the compilation of plant trait data, particularly for research students and government agencies seeking to create trait-based answers to their questions.
 
+## Comparison to TRY
+
+numbers of taxa / figures
+
+* AusTraits includes more seed and fruit nutrient data; possibly reflecting the interest in Australia, specifically WA, in understanding how fruit and seeds are provisioned in nutrient depauperate environments
+* AusTraits includes more categorical values, especially variables documenting different components of species’ fire response strategies, reflecting the importance of fire in shaping Australian communities and the research to document different strategies species have evolved to succeed in fire-prone environments
+
+- On the point about many Australian species being unrepresented in global trait databases (end of the second paragraph in Background & Summary) -- I was wondering if this could be exemplified by reporting the number of species in AusTraits compared to the number of Australian species in the TRY Plant Database (in order to show that AusTraits fills this gap substantially).
+- I was also wondering if the number of studies that have used global plant trait databases could be reported as an example to show how valuable AusTraits will be (e.g. TRY Plant Trait Database having 1613 citations according to Google Scholar) (relevant to the point that is made in the second-last sentence of Background & Summary).
+
+
+
 ### Methodology
 
 #### Primary sources
 
-AusTraits was assembled from `r austraits$sources %>% length()` distinct sources, including published literature, field campaigns, floras, and taxonomic treatments. We identified a list of candidate traits of interest, including growth form, plant height, leaf size, specific leaf area and seed mass, though several other traits were also collected opportunistically. A full list of traits and their sources appears in Table 1 (available online only). We then identified primary sources containing measurements for these traits and sought access to this data, including both data and metadata. Each original source was designated a `dataset_id`. Ordinarily the id is the surname of first author and year of publication, for the source’s primary citation (e.g. Falster_2005, for Dataset citation 40). Details from each source were saved with minimal modification into two plain text files:
+AusTraits was assembled from `r austraits$sources %>% length()` distinct sources, including published papers, field campaigns, botanical collections, and taxonomic treatments. Initially we identified a list of candidate traits of interest -- including growth form, plant height, leaf size, specific leaf area and seed mass -- then identified primary sources containing measurements for these trait, before contacting authors for access. As the compilation grew, we expanded the list of traits considered to include any measureable quantity that had been quantified for a moderate number of taxa ( n > 20). A full list of traits and their sources appears in Table 1 (available online only). Details from each source were saved with minimal modification into two plain text files:
 
 1.	`data.csv`: a table containing the actual trait data in comma-separated values format;
 2.	`metadata.yml`: contains relevant metadata for the study, as well as options for mapping trait names and units onto standard types, and any substitutions applied to the data in processing.
 
 These two files provide all the information needed to compile each study into a standardised format. 
 
+```{r, results="asis"}
+austraits$sources %>% sapply(function(i) i$key) -> keys
+
+sprintf("@%s",keys) %>% paste(collapse = "; ") %>% paste0("[", ., "]") %>% writeLines()
+```
+
+### Trait definitions 
+
+TOP: [Garnier-2017]
+
+### Taxonomy
+
+Taxonomy updated via Australian Plant Census (APC) [@apc-2020], Australian Plant Names Index (APNI) [@apni-2020]
+
 #### Schema
+
+
+Each original source was designated a `dataset_id`. Ordinarily the id is the surname of first author and year of publication, for the source’s primary citation (e.g. Falster_2005, for Dataset citation 40).
 
 The schema of AusTraits broadly follows the principles of the established Observation and Measurement Ontology [@madin2007ontology] in that, where available, trait data are connected to contextual information about the collection site (e.g. location co-ordinates, soil conditions, number of replicates) and information about the methods used to derive measurements (e.g. number of replicates, equipment used where available). The target format contains eight core objects, as described in Table 2. The contents of several of these objects are described further in Tables 3-6. This format was developed to include sufficient information about the data and methods used to collect trait measurements in each source. Where possible, trait measurement was recorded as being one of several possible `value_type` (Table 7), reflecting the type of measurement recorded.
 
 #### Harmonisation
 
-To harmonise each source into the common AusTraits format we applied a reproducible and transparent workflow (Figure 1), written in R [@R-2020] and using custom code and drawing on functions from the packages `tidyverse` [@wickham2016tidyverse], `stringr` [@wickham2017stringr], `yaml` [@stephens2014yaml], `remake` [@fitzjohn2016remake],  `knitr` [@xie1general] and `rmarkdown` [@allaire2015rmarkdown]. In this workflow, we performed a series of operations, including reformatting data into standardising format, generating observation id’s for each individual measured, transforming variable names into common terms, transforming data common units, standardising terms for categorial variables, encoding suitable metadata, and flagging data that did not pass quality checks. 
+To harmonise each source into the common AusTraits format we applied a reproducible and transparent workflow (Figure 1), written in R [@R-2020] and using custom code and drawing on functions from the packages `tidyverse` [@wickham2016tidyverse], `stringr` [@wickham2017stringr], `yaml` [@stephens2014yaml], `remake` [@fitzjohn2016remake],  `knitr` [@xie1general] and `rmarkdown` [@allaire2015rmarkdown]. In this workflow, we performed a series of operations, including reformatting data into standardising format, generating observation id’s for each individual measured, transforming variable names into common terms, transforming data common units, standardising terms for categorical variables, encoding suitable metadata, and flagging data that did not pass quality checks. 
 
 To enhance data quality, we produced detailed reports for each variable and source. These reports were reviewed both by AusTraits compilers as well as data contributors. Whilst all care is taken to curate datasets in AusTraits this is not intended to absolve individual researchers from ensuring the appropriate use of the data provided. 
+
+#### Analysis
+
+Phylogenetic tree constructed by pruning  [@Smith-2018] using package `V.PhyloMaker` [@Jin-2020] and visualising using the package `ggtree` [@Yu-2017]
 
 #### Code Availability
 
@@ -179,14 +215,14 @@ Each data release is a compressed folder containing separate files for each of t
 
 #### Acknowledgement
 
-DSF was supported by Australian Research Council Future Fellowship (FT160100113), RVG was supported by Australian Research Council DECRA Fellowship (DE170100208). 
+DSF was supported by Australian Research Council Future Fellowship (FT160100113), RVG was supported by Australian Research Council DECRA Fellowship (DE170100208). This work was supported by fellowship grants from Australian Research Council to Falster (FT160100113), Gallagher (DE170100208) and Wright, and funding from the Australian Research Data Commons under their "Transformative data collections" program. 
 
-We acknowledge XXXXXXXXXXx institutions, who
+We acknowledge XXXXXXXXXXx institutions, who XXXXX
 
 
 #### Author contributions
 
-RVG, IJW conceived the original idea; RVG, EHW, CB collated data from primary sources; DSF developed the workflow for the harmonising of data and led all coding; EHW, DI, SCA, JL contributed to coding; EHW, CB, JL, SA error-checked trait observations; DI developed figures for the paper; DSF, RVG, DI, EHW wrote the first draft of the paper. All other authors contributed the raw data and metadata undeprinning the resource and reviewed the harmonised data for errors.
+RVG, IJW conceived the original idea; RVG, EHW, CB collated data from primary sources; DSF developed the workflow for the harmonising of data and led all coding; EHW, DI, SCA, JL contributed to coding; EHW, CB, JL, SA error-checked trait observations; DI developed figures for the paper; DSF, RVG, DI, EHW wrote the first draft of the paper. All other authors contributed the raw data and metadata underpinning the resource and reviewed the harmonised data for errors.
 
 #### Competing interests
 
@@ -195,27 +231,21 @@ The authors have no conflicts of interest to declare.
 
 ```{r austraits}
 ## Assumes to items exist in global name space
-austraits <- readRDS("data/austraits_2.0.0.rds")
-
-definitions <- austraits$definitions
-
-tmp <- RefManageR::WriteBib(austraits$sources, "data/references_data.bib")
 
 # check non ASCII file
 #tools::showNonASCIIfile("references.bib")
 
 sources_all <- 
   bind_rows(
-    austraits$methods %>% select(dataset_id, citation = source_primary_key) %>% 
-            distinct() %>% mutate(type="primary"),
-    austraits$methods %>% select(dataset_id, citation = source_secondary_key) %>% 
-            distinct() %>% mutate(type="secondary")
+    austraits$methods %>% select(dataset_id, citation = source_primary_key),
+    austraits$methods %>% select(dataset_id, citation = source_secondary_key)
   ) %>% 
+  na_if("") %>%
   na.omit() %>% 
+  distinct() %>% 
   arrange(dataset_id) %>% 
   group_by(dataset_id) %>% 
-  summarise(refs = sprintf("@%s", citation) %>% 
-  paste(collapse = "; "))
+  summarise(refs = sprintf("@%s", citation) %>% str_replace_all("; ", "; @") %>% paste(collapse = "; ") )
 
 ```
 
@@ -242,10 +272,6 @@ This document provides information on the structure of AusTraits and corresponds
 
 \clearpage 
 
-<!-- Cite: -->
-  <!-- G Yu, DK Smith, H Zhu, Y Guan, TTY Lam*. ggtree: an R package for visualization and annotation of phylogenetic trees with their covariates and other associated data. Methods in Ecology and Evolution. 2017, 8(1):28-36. doi: 10.1111/2041-210X.12628.  -->
-  <!-- G Yu*, TTY Lam, H Zhu, Y Guan*. Two methods for mapping and visualizing associated data on phylogeny using ggtree. Molecular Biology and Evolution, 2018, 35(2):3041-3043. doi: 10.1093/molbev/msy194. -->
-
 
 ## Tables  
 
@@ -258,6 +284,8 @@ tibble(
   ) %>% 
   kable()
 ```
+
+\newpage
 
 Table 2: Traits represented in database
 ```{r}
@@ -285,18 +313,18 @@ n_records <-
             Studies = n_distinct(dataset_id),
             Taxon = n_distinct(taxon_name),
             Families = n_distinct(family),
-            `Data Citations` = refs %>% unique() %>% paste(collapse = "; ")
+            `Data Citations` = refs %>% unique() %>% paste(collapse = "; ") %>% paste0("[", ., "]")
             ) %>% 
   left_join(trait_categories, by=c("trait_name")) %>% 
   select(Tissue = tissue, Category = category, Trait = trait_name, everything()) %>% 
   arrange(Tissue, Category, Trait)
 
 n_records$Type <- sapply(austraits$definitions$traits$elements, "[[","type")[n_records$Trait]
-n_records$Description <- sapply(austraits$definitions$traits$elements, "[[","description")[n_records$Trait]
+n_records$Description <- sapply(austraits$definitions$traits$elements, "[[","description")[n_records$Trait] %>% unlist()
 
 n_records %>%
-  select(-Tissue, Description) %>%
-  kable()
+  select(-Tissue, -Description) %>%
+  knitr::kable()
 ```
 
 
@@ -343,33 +371,5 @@ austraits$definitions$value_type$values %>%
 ```
 
 \footnotesize
-
-### Data sources:
-
-#### Version 1 - via bib.print
-
-```{r, results='asis', eval=TRUE}
-sources_unique <-
-  bind_rows(
-    austraits$methods %>% select(citation = source_primary_citation)  %>% mutate(type="primary"),
-    austraits$methods %>% select(dataset_id, citation = source_secondary_citation) %>% mutate(type="secondary")
-  ) %>%
-  select(citation) %>%
-            distinct() %>% 
-            mutate(source_number=1:n())
-
-sprintf("%s. %s", sources_unique$source_number, sources_unique$citation) %>% paste(collapse = "\n\n") %>% writeLines()
-
-```
-
-#### Version 3 - via csl
-
-```{r, results='asis', eval=FALSE}
-
-austraits$sources %>% sapply(function(i) i$key) -> keys
-
-sprintf("@%s",keys) %>% paste(collapse = "; ") %>% writeLines()
-```
-
 
 ### References
