--- a/data/references_ms.bib
+++ b/data/references_ms.bib
@@ -45,7 +45,7 @@
 @Article{diaz1998plant,
   title = {Plant functional traits and environmental filters at a regional scale},
   author = {Sandra Diaz and Marcelo Cabido and Fernando Casanoves},
-  journal = {Journal of vegetation science},
+  journal = {Journal of Vegetation Science},
   volume = {9},
   number = {1},
   pages = {113--122},
@@ -107,9 +107,9 @@
 }
 
 @Article{kattge2011try,
-  title = {TRY--a global database of plant traits},
-  author = {Jens Kattge and Sandra Diaz and Sandra Lavorel and I Colin Prentice and Paul Leadley and Gerhard Bönisch and Eric Garnier and Mark Westoby and Peter B Reich and Ian J Wright and others},
-  journal = {Global change biology},
+  title = {{{TRY}} \textendash{} a Global Database of Plant Traits},
+  author = {Kattge, J. and D{\'i}az, S. and Lavorel, S. and Prentice, I. C and Leadley, P. and B{\"o}nisch, G. and Garnier, E. and Westoby, M. and Reich, P. B and Wright, I. J and Cornelissen, J. H. C and Violle, C. and Harrison, S. P and {van Bodegom}, P. M and Reichstein, M. and Enquist, B. J and Soudzilovskaia, N. A and Ackerly, D. D and Anand, M. and Atkin, O. and Bahn, M. and Baker, T. R and Baldocchi, D. and Bekker, R. and Blanco, C. C and Blonder, B. and Bond, W. J and Bradstock, R. and Bunker, D. E and Casanoves, F. and Cavender-Bares, J. and Chambers, J. Q and Chapin III, F. S and Chave, J. and Coomes, D. and others},
+  journal = {Global Change Biology},
   volume = {17},
   number = {9},
   pages = {2905--2935},
@@ -118,22 +118,39 @@
 }
 
 
-@techreport{Gallagher-2019,
-  title = {The {{Open Traits Network}}: {{Using Open Science}} Principles to Accelerate Trait-Based Science across the {{Tree}} of {{Life}}},
-  shorttitle = {The {{Open Traits Network}}},
-  author = {Gallagher, Rachael and Falster, Daniel Stein and Maitner, Brian and {Salguero-Gomez}, Rob and Vandvik, Vigdis and Pearse, William and Schneider, Florian and Kattge, Jens and Alroy, John and Ankenbrand, Markus Johannes and Andrew, Samuel and Balk, Meghan and Bland, Lucie and Boyle, Bradley and {Bravo-Avila}, Catherine and Brennan, Ian and Carthey, Alexandra and Catullo, Renee and Cavazos, Brittany and Chown, Steven and Fadrique, Belen and Feng, Xiao and Halbritter, Aud Helen and Hammock, Jennifer and Hogan, J. Aaron and Holewa, Hamish and Iversen, Colleen and Jochum, Malte and Kearney, Michael and Keller, Alexander and Mabee, Paula and Madin, Joshua and Manning, Peter and McCormack, Luke and Michaletz, Sean and Park, Daniel and Penone, Caterina and Perez, Timothy and {Pineda-Munoz}, Silvia and Poelen, Jorrit H and Ray, Courtenay and Rossetto, Maurizio and Sauquet, Herv{\'e} and Sparrow, Ben and Spasojevic, Marko J. and Telford, Richard James and Tobias, Joseph A. and Violle, Cyrille and Walls, Ramona and Weiss, Katherine C. B. and Westoby, Mark and Wright, Ian and Enquist, Brian},
-  year = {2019},
-  institution = {{EcoEvoRxiv}},
-  doi = {10.32942/osf.io/kac45},
-  type = {Preprint}
+@article{Kattge-2011,
+  title = {A Generic Structure for Plant Trait Databases: {{A}} Generic Structure for Plant Trait Databases},
+  shorttitle = {A Generic Structure for Plant Trait Databases},
+  author = {Kattge, Jens and Ogle, Kiona and B{\"o}nisch, Gerhard and D{\'i}az, Sandra and Lavorel, Sandra and Madin, Joshua and Nadrowski, Karin and N{\"o}llert, Stephanie and Sartor, Karla and Wirth, Christian},
+  year = {2011},
+  volume = {2},
+  pages = {202--213},
+  doi = {10.1111/j.2041-210X.2010.00067.x},
+  journal = {Methods in Ecology and Evolution}
 }
+
+
+
+@article{Gallagher-2020,
+  title = {{Open Science} Principles for Accelerating Trait-Based Science across the {{Tree}} of {{Life}}},
+  author = {Gallagher, Rachael V. and Falster, Daniel S. and Maitner, Brian S. and {Salguero-G{\'o}mez}, Roberto and Vandvik, Vigdis and Pearse, William D. and Schneider, Florian D. and Kattge, Jens and Poelen, Jorrit H. and Madin, Joshua S. and Ankenbrand, Markus J. and Penone, Caterina and Feng, Xiao and Adams, Vanessa M. and Alroy, John and Andrew, Samuel C. and Balk, Meghan A. and Bland, Lucie M. and Boyle, Brad L. and {Bravo-Avila}, Catherine H. and Brennan, Ian and Carthey, Alexandra J. R. and Catullo, Renee and Cavazos, Brittany R. and Conde, Dalia A. and Chown, Steven L. and Fadrique, Belen and Gibb, Heloise and Halbritter, Aud H. and Hammock, Jennifer and Hogan, J. Aaron and Holewa, Hamish and Hope, Michael and Iversen, Colleen M. and Jochum, Malte and Kearney, Michael and Keller, Alexander and Mabee, Paula and Manning, Peter and McCormack, Luke and Michaletz, Sean T. and Park, Daniel S. and Perez, Timothy M. and {Pineda-Munoz}, Silvia and Ray, Courtenay A. and Rossetto, Maurizio and Sauquet, Herv{\'e} and Sparrow, Benjamin and Spasojevic, Marko J. and Telford, Richard J. and Tobias, Joseph A. and Violle, Cyrille and Walls, Ramona and Weiss, Katherine C. B. and Westoby, Mark and Wright, Ian J. and Enquist, Brian J.},
+  year = {2020},
+  volume = {4},
+  pages = {294--303},
+  publisher = {{Nature Publishing Group}},
+  doi = {10.1038/s41559-020-1109-6},
+  journal = {Nature Ecology \& Evolution},
+  type = {{{ReviewPaper}}}
+}
+
+
 
 
 
 
 @article{Kattge-2020,
   title = {{{TRY}} Plant Trait Database \textendash{} Enhanced Coverage and Open Access},
-  author = {Kattge, Jens and others},
+  author = {Kattge, Jens and B{\"o}nisch, Gerhard and D{\'i}az, Sandra and Lavorel, Sandra and Prentice, Iain Colin and Leadley, Paul and Tautenhahn, Susanne and Werner, Gijsbert D. A. and Aakala, Tuomas and Abedi, Mehdi and Acosta, Alicia T. R. and Adamidis, George C. and Adamson, Kairi and Aiba, Masahiro and Albert, C{\'e}cile H. and Alc{\'a}ntara, Julio M. and C, Carolina Alc{\'a}zar and Aleixo, Izabela and Ali, Hamada and Amiaud, Bernard and Ammer, Christian and Amoroso, Mariano M. and Anand, Madhur and Anderson, Carolyn and Anten, Niels and Antos, Joseph and Apgaua, Deborah Mattos Guimar{\~a}es and Ashman, Tia-Lynn and Asmara, Degi Harja and Asner, Gregory P. and Aspinwall, Michael and Atkin, Owen and Aubin, Isabelle and Baastrup-Spohr, Lars and Bahalkeh, Khadijeh and Bahn, Michael and Baker, Timothy and Baker, William J. and Bakker, Jan P. and others},
   year = {2020},
   volume = {26},
   pages = {119--188},
@@ -266,7 +283,7 @@
   note = {R package version 0.1.0},
 }
 
-@misc{apc-2020,
+@Manual{apc-2020,
   title={{Australian Plant Census, Centre of Australian National Biodiversity Research} },
   author={CHAH},
   year={2020},
@@ -274,14 +291,12 @@
 }
 
 
-@misc{apni-2020,
+@Manual{apni-2020,
   title={{Australian Plant Name Index (continuously updated), Centre of Australian National Biodiversity Research}},
   author={CHAH},
   year={2020},
   publisher={https://www.biodiversity.org.au/nsl/services/apni (14/05/2020)}
   }
-
-
 
 @article{Garnier-2017,
   title = {Towards a Thesaurus of Plant Characteristics: An Ecological Contribution},
@@ -292,6 +307,20 @@
   pages = {298--309},
   doi = {10.1111/1365-2745.12698},
   journal = {Journal of Ecology}
+}
+
+
+
+@article{Chamberlain-2013,
+  title = {Taxize: Taxonomic Search and Retrieval in {{R}}},
+  shorttitle = {Taxize},
+  author = {Chamberlain, Scott A. and Sz{\"o}cs, Eduard},
+  year = {2013},
+  volume = {2},
+  pages = {191},
+  doi = {10.12688/f1000research.2-191.v2},
+  annotation = {00000},
+  journal = {F1000Research}
 }
 
 
