--- a/ms.Rmd
+++ b/ms.Rmd
@@ -45,9 +45,7 @@ knitr::opts_chunk$set(echo=FALSE, cache=FALSE, results='asis', message=FALSE, wa
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, results="hide"}
-library(knitr)
-library(tidyverse)
-library(rmarkdown)
+devtools::load_all()
 source("R/ms.R")
 source("R/load_data.R")
 load_data()
@@ -314,69 +312,7 @@ austraits$definitions$value_type$values %>%
 Table 10: Details on all traits represented in Version `r austraits$build_info$version` of AusTraits.
 
 ```{r}
-
-## Add `\citet{}` for references. 
-## Separate into groups of max size n. 
-## This is needed for latex table, overwise citations
-## spill off the page
-format_cites_n <- function(x, n = 6){
-  
-  # Make sorted vector of all unique refs
-  x2 <- str_split(x, ", ") %>% unlist() %>% sort()
-  # Make a vector with group ids for references
-  groups <- (rep(1:ceiling(length(x2)/n), n) %>% sort() )[seq_len(length(x2))]
-  
-  ## wrap given txt with citation call  
-  format_cites_sub <- function(x) {x %>% paste(collapse = ", ") %>% paste0("\\citep{", ., "}" )}
-  
-  ## split into groups of n citations, wrap each with citation call, the combine
-  split(x2, groups) %>% lapply(format_cites_sub) %>% paste(collapse = " \\newline ")
-  }
-
-
-## format table
-make_latex_table <- function(data) {
-  data %>%
-  # nasty hacks - replace `_` with `TTTTT` then return below, prevents unhelpful handling of _ in creation of latex table
-  mutate(refs = str_replace_all(refs, "_", "TTTT")) %>%  
-  knitr::kable("latex",  booktabs = TRUE, longtable = TRUE ) %>%
-  kableExtra::kable_styling(font_size = 7, latex_options = c("repeat_header", "striped")) %>%
-  kableExtra::column_spec(1, width = "3cm") %>%
-  kableExtra::column_spec(2, width = "4cm") %>%
-  kableExtra::column_spec(9, width = "3cm") %>%
-  kableExtra::add_header_above(c(" ", " ", " ", "Number of records" = 5)) %>%
-  # nasty hacks - clean up backslashes and references. (why oh why is this needed?)
-  str_replace_all(fixed("textbackslash{}"), fixed("")) %>%
-  str_replace_all(fixed("gray!6"), fixed("gray!20")) %>%
-  str_replace_all(fixed("\\{"), fixed("{")) %>%
-  str_replace_all(fixed("\\}"), fixed("}"))  %>% 
-  str_replace_all(fixed("TTTT"), fixed("_")) %>%
-  str_split("\\n") %>% unlist()
-}
-
-# wraps text in table cell to max number of characters per line -- needed for long words with no spaces (i.e. trait names)
-txt_wrap <- function(txt, n=22) {
-
-  f <- function(txt, end=-1L) {
-      ifelse(str_length(txt) > 0, paste("\\newline", str_sub(txt, 0, end)), txt)
-  }
-  
-  g <- function(txt) {
-      ifelse(str_length(txt) < n, -1L, 
-              str_locate_all(txt,"_") %>% purrr::map_dbl(~.x %>% .[,"start"] %>% subset(., .<= n) %>% max(., -1L)) 
-            )
-  }
-  
-  i <- g(txt)
-  txt2 <- ifelse(str_length(txt) > n , str_sub(txt, i+1), "")
-  ii <- g(txt2)
-  txt3 <- ifelse(str_length(txt2) > n , str_sub(txt2, ii+1), "")
-  
-  paste(str_sub(txt, 1, i), f(txt2, ii), f(txt3))
-}
-    
-
-n_records %>%
+ n_records %>%
   mutate(
          Trait = txt_wrap(Trait),
          Group = paste0(str_to_sentence(Tissue), " (", Category, ")") %>%  str_replace_all("_", " "), 
