--- a/data/references.bib
+++ b/data/references.bib
@@ -325,6 +325,19 @@
 
 
 
+@article{Falster-2019,
+  title = {Datastorr: A Workflow and Package for Delivering Successive Versions of 'evolving Data' Directly into {{R}}},
+  shorttitle = {Datastorr},
+  author = {Falster, Daniel S. and FitzJohn, Richard G. and Pennell, Matthew W. and Cornwell, William K.},
+  year = {2019},
+  volume = {8},
+  pages = {giz035},
+  doi = {10.1093/gigascience/giz035},
+  journal = {GigaScience}
+}
+
+
+
 
 @Article{Adams_1984,
   year = {1984},
